...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#E8EAF6"
    tools:context=".ui.neighbour_details.NeighbourVueActivity"
    android:id="@+id/activity_vue">


    <ImageView
        android:id="@+id/vue_image_avatar"
        android:layout_width="@dimen/image_height"
        android:layout_height="@dimen/image_height"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>


    <TextView
        android:id="@+id/vue_name_photo_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="Utilisateur"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
...
